--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
-    
+    <link href='https://fonts.googleapis.com/css?family=Plus Jakarta Sans' rel='stylesheet'>
     <title>DriveAway</title>
   </head>
   <body>
