--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
     <link href='https://fonts.googleapis.com/css?family=Plus Jakarta Sans' rel='stylesheet'>
+    <script src="./src/assets/filestack.min.js"></script>
     <title>DriveAway</title>
   </head>
   <body>
