--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link href='https://fonts.googleapis.com/css?family=Plus Jakarta Sans' rel='stylesheet'>
     <script src="/src/assets/filestack.min.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <title>DriveAway</title>
   </head>
   <body>
