fixed image upload bug

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
     <link href='https://fonts.googleapis.com/css?family=Plus Jakarta Sans' rel='stylesheet'>
-    <script src="/src/assets/filestack.min.js"></script>
+    <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <title>DriveAway</title>
   </head>
